# cpp-learning

homework_1/task_1/: commands.sh
homework_1/task_2/: CMakeLists.txt  build.sh  configure.sh  install.sh
homework_1/task_2/include/: CMakeLists.txt
homework_1/task_2/include/include/: Makefile
homework_2/: main.cpp
homework_2/task_1/: CMakeLists.txt  main.cpp
homework_2/task_2/: main.cpp
homework_3/: CMakeLists.txt  main.cpp
homework_3/api/: html_writer.cpp  image_browser.cpp
homework_3/web_app/: test.html
lecture-1/: CMakeLists.txt  main.cpp  run.sh
lecture-1/lib/: tools.cpp  tools.hpp
lecture_2/: CMakeLists.txt  build.sh  main.cpp  run.sh
